@@ -105,6 +105,7 @@ int FilterAlignEntries(AlignEntries *a,
 						startPos,
 						endContig,
 						endPos,
+						minScoreReads,
 						algorithmReadsPaired,
 						minScoreReadsPaired,
 						minDistancePaired,
@@ -350,6 +351,7 @@ int FilterOneAlignEntries(AlignEntries *a,
 		int startPos,
 		int endContig,
 		int endPos,
+		int minScoreReads,
 		int algorithmReadsPaired,
 		int minScoreReadsPaired,
 		int minDistancePaired,
@@ -382,7 +384,7 @@ int FilterOneAlignEntries(AlignEntries *a,
 	for(i=0;i<a->numEntriesOne;i++) { /* First read */
 		/* Filter first entry for contig position */
 		if(0 == FilterAlignEntry(&a->entriesOne[i],
-					INT_MIN,
+					minScoreReads,
 					startContig,
 					startPos,
 					endContig,
@@ -392,7 +394,7 @@ int FilterOneAlignEntries(AlignEntries *a,
 				curScore = a->entriesOne[i].score + a->entriesTwo[j].score;
 				/* Filter second entry for contig position.  Also filter based on score. */
 				if(0 == FilterAlignEntry(&a->entriesTwo[j],
-							INT_MIN,
+							minScoreReads,
 							startContig,
 							startPos,
 							endContig,
