@@ -37,6 +37,7 @@ int FilterOneAlignEntries(AlignEntries *a,
 		int startPos,
 		int endChr,
 		int endPos,
+		int minScoreReads,
 		int algorithmReadsPaired,
 		int minScoreReadsPaired,
 		int minDistancePaired,
