@@ -7,6 +7,7 @@ Please send bfast bug reports to nhomer@cs.ucla.edu
 
 Version 0.1.7
 * Update bpostprocess for paired end support: now tested.
+* Added support for filtering each end by score for paired end reads.
 * Removed extra "." in inversions file (bpostprocess).
 * Updated btestindexes against small bugs and added optimizations.
 * Added bgeneratedistribution to calculate error distributions.
